# MwASiS

./: .gitignore  Makefile  README.md  nbconf.py  pyproject.toml
autotest/: pyproject.toml
autotest/autotest/: __main__.py  autotest.py
autotest/autotest/questions/: example.py  kl_mc.py  masis_bayes.py  masis_bayes2.py  masis_mle.py  masis_normal.py  model_liniowy.py
autotest/autotest/templates/: quiz.xml
egzamin/: zadania_egzamin.md
oceny/: oceny.ipynb
wykład/: Bayes.ipynb  Modele_probabilistyczne.ipynb  Obliczenia_Bayesowskie.ipynb  Parametryzacja_modeli.ipynb  Podsumowanie.ipynb  Szeregi_czasowe.ipynb  Thompson_sampling.ipynb  Zaawansowane_modele_probabilistyczne.ipynb  mwasis.py
wykład/Bayes_tex/: Bayes.tex
ćwiczenia/: Bayes_II_cw.ipynb  Bayes_cw.ipynb  Bayes_Ćwiczenia.ipynb  Modele_probabilistyczne_Ćwiczenia.ipynb  Obliczenia_techniczne_Ćwiczenia.ipynb  Parametryzacja_modeli_Ćwiczenia.ipynb  Szeregi_czasowe_cw.ipynb  Zawansowane_modele_cw.ipynb
