[project]
name = "mwasis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "jax>=0.6.0",
    "jaxlib>=0.6.0",
    "jupyterlab>=4.4.1",
    "matplotlib-inline>=0.1.7",
    "optax>=0.2.4",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "silence-tensorflow>=1.2.3",
    "sympy>=1.14.0",
    "tensorflow>=2.19.0",
    "tensorflow-probability[tf]>=0.25.0",
]
